deployment/apps/cilium/hubble-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-system-http
  namespace: kube-system
spec:
  parentRefs:
  - kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  hostnames:
  - hubble.apps.timgiertz.com
  rules:
  - matches:
    backendRefs:
    - name: hubble-ui
      port: 80
